--- a/order-details.html
+++ b/order-details.html
@@ -279,7 +279,7 @@
     <tbody id="orders-table-body"></tbody>
   </table>
 <!-- Customer Remarks -->
-  <div id="customer-remarks-container" style="text-align: right; margin-top: 20px; font-style: italic;"></div>
+  <div id="customerRemarks" style="text-align: right; margin-top: 20px; font-style: italic;"></div>
   
   <table id="quotation-table">
     <tr><td id="grand-total-label">Grand Total</td></tr>
@@ -422,18 +422,7 @@
       document.getElementById("signature-image").style.display = "none";
       document.getElementById("signature-name").style.display = "none";
 });
-    document.addEventListener("DOMContentLoaded", function() {
-    const printButton = document.getElementById("print-pdf");
-
-    if (printButton) {
-        printButton.addEventListener("click", function() {
-            // Fungsi print di sini
-            console.log("Print button clicked!");
-        });
-    } else {
-        console.error("Elemen #print-pdf tidak ditemukan!");
-    }
-});
+   
     document.getElementById("signature-pad").style.display = "none";
     document.getElementById("save-signature").style.display = "none";
     document.getElementById("clear-signature").style.display = "none";
@@ -445,7 +434,7 @@
     document.getElementById("signature-pad").style.display = "block";
     document.getElementById("save-signature").style.display = "inline-block";
     document.getElementById("clear-signature").style.display = "inline-block";
-
+    });
 // Cek apakah ada tanda tangan yang sudah disimpan
 window.onload = () => {
   const savedSignature = localStorage.getItem("savedSignature");
@@ -484,7 +473,19 @@ window.onload = () => {
         console.error("Element #customer-remarks-container tidak ditemukan.");
     }
 });
+function getQueryParam(param) {
+    const urlParams = new URLSearchParams(window.location.search);
+    return urlParams.get(param);
+}
 
+document.addEventListener("DOMContentLoaded", function() {
+    const remarks = getQueryParam("customer_remarks");
+    if (remarks) {
+        document.getElementById("customerRemarks").textContent = remarks;
+    } else {
+        document.getElementById("customerRemarks").textContent = "No remarks provided.";
+    }
+});
   </script>
 
 </body>
