--- a/order-details.html
+++ b/order-details.html
@@ -466,7 +466,7 @@ window.onload = () => {
         const orderId = urlParams.get("order_id") || "Unknown";
 
         if (customerRemarks !== "N/A") {
-            remarksContainer.textContent = customerRemarks + " - (Order ID: " + orderId + ")";
+            remarksContainer.textContent = customerRemarks + " - (Order ID: " + orders + ")";
         } else {
             remarksContainer.textContent = "No remarks provided.";
         }
