--- a/order-details.html
+++ b/order-details.html
@@ -484,7 +484,7 @@ window.onload = () => {
     if (remarksText) {
         remarksContainer.innerHTML = remarksText;
     } else {
-        remarksContainer.textContent = "Tidak ada catatan customer.";
+        remarksContainer.textContent = "No remarks provided.";
     }
 });
   </script>
