--- a/order-details.html
+++ b/order-details.html
@@ -475,7 +475,7 @@ window.onload = () => {
     if (orderIds.length > 0 && customerRemarks.length > 0) {
         for (let i = 0; i < orderIds.length; i++) {
             if (customerRemarks[i] && customerRemarks[i] !== "N/A") {
-                remarksText += • ${customerRemarks[i]} (Order ID: ${orderIds[i]})<br>;
+                remarksText += • '${customerRemarks[i]} (Order ID: ${orderIds[i]})'<br>;
             }
         }
     }
