--- a/order-details.html
+++ b/order-details.html
@@ -476,7 +476,7 @@ window.onload = () => {
         orderIds.forEach((orderId, index) => {
             const remark = customerRemarks[index];
             if (remark && remark !== "N/A") {
-                remarksText += • ${remark} (Order ID: ${orderId})<br>;
+                remarksText += '• ${remark} (Order ID: ${orderId})<br>';
             }
         });
 
