--- a/order-details.html
+++ b/order-details.html
@@ -484,7 +484,7 @@ window.onload = () => {
             const remark = customerRemarks[index];
 
             // Debug: Cek remark yang sedang diproses
-            console.log'(Processing Order ID: ${order_Id}, Remark: ${remark})';
+            console.log('Processing Order ID: ${order_Id}, Remark: ${remark}');
 
             if (remark && remark !== "N/A") {
                 remarksText += • ${remark} (Order ID: ${order_Id})<br>;
