--- a/order-details.html
+++ b/order-details.html
@@ -487,7 +487,7 @@ window.onload = () => {
             console.log('Processing Order ID: ${order_Id}, Remark: ${remark}');
 
             if (remark && remark !== "N/A") {
-                remarksText += • ${remark} (Order ID: ${order_Id})<br>;
+                remarksText += '• ${remark} (Order ID: ${order_Id})<br>';
             }
         });
     }
