--- a/order-details.html
+++ b/order-details.html
@@ -493,6 +493,8 @@ window.onload = () => {
     }
 
     // Debug: Cek hasil akhir remarksText
+    console.log("Raw customerRemarks:", customerRemarksRaw);
+    console.log("Processed customerRemarks:", customerRemarks);
     console.log("Final Remarks Text:", remarksText);
 
     // Jika ada remarks, tampilkan di HTML
