--- a/order-details.html
+++ b/order-details.html
@@ -470,7 +470,7 @@ window.onload = () => {
     console.log("URL Params:", urlParams.toString());
 
     // Ambil semua order_id dan customer_remarks dari URL
-    const orderIds = urlParams.getAll("order_id");
+    const orderIds = urlParams.getAll("orderid");
     const customerRemarks = urlParams.getAll("customer_remarks");
 
     // Debug: Cek apakah orderIds dan customerRemarks benar
@@ -482,8 +482,6 @@ window.onload = () => {
     if (orderIds.length > 0 && customerRemarks.length > 0) {
         orderIds.forEach((orderId, index) => {
             const remark = customerRemarks[index];
-            const customerRemarksRaw = decodeURIComponent(urlParams.get("customer_remarks") || "");
-            const customerRemarks = customerRemarksRaw ? customerRemarksRaw.split("|") : [];
 
             // Debug: Cek remark yang sedang diproses
             console.log('Processing Order ID: ${orderId}, Remark: ${remark}');
