--- a/order-details.html
+++ b/order-details.html
@@ -462,7 +462,7 @@ window.onload = () => {
     const remarksContainer = document.getElementById("customer_remarks");
 
     if (!remarksContainer) {
-        console.error("Element #customerRemarks not found.");
+        console.error("Element #customer_remarks not found.");
         return;
     }
 
