--- a/order-details.html
+++ b/order-details.html
@@ -467,7 +467,7 @@ window.onload = () => {
 
     // Ambil semua order_id dan customer_remarks dari URL
     const orderIds = urlParams.getAll("orderid");
-    const customerRemarks = urlParams.getAll("customer_remarks");
+    const customer_remarks = urlParams.getAll("customer_remarks");
 
     // Debug: Cek apakah orderIds dan customerRemarks benar
     console.log("Order IDs:", orderIds);
