--- a/order-details.html
+++ b/order-details.html
@@ -279,7 +279,7 @@
     <tbody id="orders-table-body"></tbody>
   </table>
 <!-- Customer Remarks -->
-  <div id="customerRemarks" style="text-align: right; margin-top: 20px; font-style: italic;"></div>
+  <div id="customer_remarks" style="text-align: right; margin-top: 20px; font-style: italic;"></div>
   
   <table id="quotation-table">
     <tr><td id="grand-total-label">Grand Total</td></tr>
