--- a/order-details.html
+++ b/order-details.html
@@ -469,7 +469,7 @@ window.onload = () => {
     console.log("URL Params:", urlParams.toString());
 
     // Ambil semua order_id dan customer_remarks dari URL
-    const orderIds = urlParams.getAll("orderid");
+    const orderIds = urlParams.get("orders")?.split(",") || [];
     const customer_remarks = urlParams.getAll("customer_remarks");
 
     // Debug: Cek apakah orderIds dan customerRemarks benar
