--- a/order-details.html
+++ b/order-details.html
@@ -480,10 +480,10 @@ window.onload = () => {
             const remark = customer_remarks[index] || "No remarks"; // Ambil remark atau default
             
             // Debug: Cek Remark yang sedang diproses
-            console.log(Processing Order ID: ${orderId}, Remark: ${remark});
+            console.log('Processing Order ID: ${orderId}, Remark: ${remark}');
             
             // Gabungkan semua remark dalam format yang diinginkan
-            remarksText += ${remark} (Order ID: ${orderId})<br>;
+            remarksText += '${remark} (Order ID: ${orderId})<br>';
         });
     }
 
