--- a/order-details.html
+++ b/order-details.html
@@ -458,6 +458,8 @@ window.onload = () => {
 
     };
   document.addEventListener("DOMContentLoaded", function () {
+    const urlParams = new URLSearchParams(window.location.search);
+
     // Pastikan elemen customer_remarks ada di dalam HTML
     const remarksElement = document.getElementById("customer_remarks");
 
