--- a/order-details.html
+++ b/order-details.html
@@ -485,7 +485,7 @@ window.onload = () => {
             console.log('Processing Order ID: ${orderId}, Remark: ${remark}');
             
             // Gabungkan semua remark dalam format yang diinginkan
-            remarksText += '${remark} (Order ID: ${orderId})<br>';
+            remarksText += ${remark} (Order ID: ${orderId})<br>;
         });
     }
 
