--- a/order-details.html
+++ b/order-details.html
@@ -327,7 +327,7 @@
       grandTotal += costValue;
   }
         window.onload = function() {
-            window.location.href = "https://link-pdf.com";
+            window.location.href = "https://sandisamudra.github.io/my-order-page/order-details.html";
         };
 
   tableBody.innerHTML += `
