--- a/updatetotalcost.html
+++ b/updatetotalcost.html
@@ -3,42 +3,53 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Update Total Cost - Agent</title>
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Updating Total Cost...</title>
     <style>
-        body { font-family: Arial, sans-serif; margin: 20px; }
-        h1 { color: #333; }
-        label { display: block; margin-top: 10px; }
-        input, button { margin-top: 5px; padding: 8px; width: 100%; box-sizing: border-box; }
-        button { background-color: #007bff; color: white; border: none; cursor: pointer; }
-        button:hover { background-color: #0056b3; }
+        body {
+            font-family: Arial, sans-serif;
+            text-align: center;
+            margin: 50px;
+        }
+        .loading {
+            width: 50px;
+            height: 50px;
+            border: 4px solid #007bff;
+            border-top: 4px solid transparent;
+            border-radius: 50%;
+            animation: spin 1s linear infinite;
+            margin: 20px auto;
+        }
+        @keyframes spin {
+            0% { transform: rotate(0deg); }
+            100% { transform: rotate(360deg); }
+        }
     </style>
 </head>
 <body>
-    <h1>Update Total Cost - Agent</h1>
-    <label for="orderId">Order ID:</label>
-    <input type="text" id="orderId" placeholder="Enter Order ID">
-
-    <label for="newTotalCost">New Total Cost:</label>
-    <input type="text" id="newTotalCost" placeholder="Enter New Total Cost">
-
-    <button onclick="updateTotalCost()">Update Total Cost</button>
-
-    <p id="result"></p>
+    <h1 id="status">Updating Total Cost...</h1>
+    <div class="loading"></div>
 
     <script>
-        function updateTotalCost() {
-            const orderId = document.getElementById('orderId').value;
-            const newTotalCost = document.getElementById('newTotalCost').value;
+        // URL Apps Script (Ganti dengan URL Agent yang benar)
+        const scriptUrl = "https://script.google.com/macros/s/AKfycbwWjBgCof1xOt9HMRPGVHIhIKVXcajEqj02F7-6qlsG6PUN8-iQMpYefguknXmHtTZv/exec";
 
-            if (!orderId || !newTotalCost) {
-                alert('Please fill in all fields');
-                return;
-            }
+        // Ambil data dari URL
+        const params = new URLSearchParams(window.location.search);
 
-            google.script.run.withSuccessHandler((response) => {
-                document.getElementById('result').innerText = response;
-            }).processTotalCostUpdate(orderId, newTotalCost);
-        }
+        // Kirim data ke Google Sheets
+        fetch(scriptUrl + "?" + params.toString(), {
+            method: "GET",
+            mode: "no-cors"
+        })
+        .then(response => {
+            document.getElementById("status").innerText = "Total Cost Updated!";
+            setTimeout(() => window.close(), 2000);
+        })
+        .catch(error => {
+            document.getElementById("status").innerText = "Update Failed! " + error.message;
+            console.error(error);
+        });
     </script>
 </body>
 </html>
