--- a/updatetotalcost.html
+++ b/updatetotalcost.html
@@ -3,22 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Updating Total Cost...</title>
+    <title>Update Total Cost</title>
     <style>
         body {
             font-family: Arial, sans-serif;
             text-align: center;
-            margin: 50px;
+            margin: 0;
+            padding: 0;
+            height: 100vh;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
         }
         .loading {
-            width: 50px;
-            height: 50px;
-            border: 4px solid #007bff;
-            border-top: 4px solid transparent;
+            width: 40px;
+            height: 40px;
+            border: 4px solid #ccc;
+            border-top: 4px solid #007bff;
             border-radius: 50%;
             animation: spin 1s linear infinite;
-            margin: 20px auto;
+            margin-top: 20px;
         }
         @keyframes spin {
             0% { transform: rotate(0deg); }
@@ -31,9 +36,9 @@
     <div class="loading"></div>
 
     <script>
-        // URL Apps Script (Ganti dengan URL Agent yang benar)
+        // URL Apps Script kamu
         const scriptUrl = "https://script.google.com/macros/s/AKfycbwWjBgCof1xOt9HMRPGVHIhIKVXcajEqj02F7-6qlsG6PUN8-iQMpYefguknXmHtTZv/exec";
-
+        
         // Ambil data dari URL
         const params = new URLSearchParams(window.location.search);
 
@@ -42,14 +47,17 @@
             method: "GET",
             mode: "no-cors"
         })
-        .then(response => {
-            document.getElementById("status").innerText = "Total Cost Updated!";
-            setTimeout(() => window.close(), 2000);
-        })
-        .catch(error => {
-            document.getElementById("status").innerText = "Update Failed! " + error.message;
-            console.error(error);
-        });
+            .then(response => response.text())
+            .then(data => {
+                document.getElementById("status").innerText = "Update Success";
+                setTimeout(() => {
+                    window.close();
+                }, 2000);
+            })
+            .catch(error => {
+                document.getElementById("status").innerText = "Update Failed!" + error.message;
+                console.error(error);
+            });
     </script>
 </body>
 </html>
