--- a/submit.html
+++ b/submit.html
@@ -3,11 +3,37 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sending WhatsApp...</title>
+    <title>Sending Order...</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            text-align: center;
+            margin: 0;
+            padding: 0;
+            height: 100vh;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+        }
+        .loading {
+            width: 40px;
+            height: 40px;
+            border: 4px solid #ccc;
+            border-top: 4px solid #007bff;
+            border-radius: 50%;
+            animation: spin 1s linear infinite;
+            margin-top: 20px;
+        }
+        @keyframes spin {
+            0% { transform: rotate(0deg); }
+            100% { transform: rotate(360deg); }
+        }
+    </style>
 </head>
 <body>
-    <h1>Requesting order...</h1>
-    <p>Please wait...</p>
+    <h1 id="status">Sending Order...</h1>
+    <div class="loading"></div>
 
     <script>
         // ======= KONFIGURASI =========
@@ -44,17 +70,18 @@
         const encodedMessage = encodeURIComponent(message);
 
         // ======= KIRIM PESAN =========
-        fetch(`https://api.callmebot.com/whatsapp.php?phone=${phoneNumber}&text=${encodedMessage}&apikey=${apiKey}`)
+        fetch(https://api.callmebot.com/whatsapp.php?phone=${phoneNumber}&text=${encodedMessage}&apikey=${apiKey})
             .then(response => {
                 if (response.ok) {
-                    alert('Submit Success!');
+                    document.getElementById("status").innerText = "Order submitted!";
                     setTimeout(() => window.close(), 1500);  // Tutup halaman setelah 1.5 detik
                 } else {
-                    alert('Failed to send WhatsApp notification.');
+                    document.getElementById("status").innerText = "Failed to send WhatsApp notification.";
                 }
             })
             .catch(error => {
-                alert('Error sending WhatsApp notification: ' + error.message);
+                document.getElementById("status").innerText = "Error sending WhatsApp notification!";
+                console.error(error);
             });
     </script>
 </body>
